src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service-pod
  template:
    metadata:
      labels:
        app: api-service-pod
    spec:
      containers:
        - name: api-service-container
          image: src-api-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
        - name: green-agent-container
          image: src-green-agent:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001      
        - name: red-agent-container
          image: src-red-agent:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
