src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-service
spec:
  selector:
    app: api_service_pod
  ports:
    - name: api-port
      protocol: TCP
      port: 8000
      targetPort: 8000    
    - name: green-agent-port
      protocol: TCP
      port: 8001
      targetPort: 8001
    - name: red-agent-port
      protocol: TCP
      port: 8002
      targetPort: 8002
