src/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-service-network_policy
spec:
  podSelector:
    matchLabels:
      app: api_service_pod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.0.0.0/24
          except:
            - 10.0.0.1/32
      - namespaceSelector:
          matchLabels:
            project: kube-gym
      - podSelector:
          matchLabels:
            app: api_service_pod
      ports:        # Fixed ports indentation and syntax
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8001
        - protocol: TCP
          port: 8002
  egress:
    - to:
      - ipBlock:
          cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 5978
